--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "name": "Leandro Guindani Gehlen",
     "email": "leandrogehlen@gmail.com"
   },
+  "sideEffects": false,
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
@@ -34,14 +35,14 @@
     "test:ci": "cross-env NODE_ENV=testing jest --verbose --collect-coverage --runInBand"
   },
   "engines": {
-    "node": ">= 16.19.0"
+    "node": ">= 16"
   },
   "dependencies": {
     "lodash": "^4.17.21"
   },
   "peerDependencies": {
     "axios": "^1.3.6",
-    "rxdb": "^14.9.0",
+    "rxdb": "^14.0.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
