--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
   },
   "peerDependencies": {
     "axios": "^1.3.6",
-    "rxdb": "^14.0.0",
-    "rxjs": "^7.8.1"
+    "rxdb": "^14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
