--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lint": "eslint \"src/**/*\" \"tests/**/*\"",
     "release": "release-it --only-version",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --detectOpenHandles",
-    "test:ci": "cross-env NODE_ENV=testing jest --verbose --collect-coverage --runInBand"
+    "test:ci": "cross-env NODE_ENV=testing jest --verbose --collect-coverage --runInBand --forceExit"
   },
   "engines": {
     "node": ">= 16"
@@ -41,18 +41,20 @@
     "lodash": "^4.17.21"
   },
   "peerDependencies": {
-    "axios": "^1.3.6",
     "rxdb": "^14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@faker-js/faker": "^7.6.0",
+    "@jest/globals": "^29.6.1",
     "@types/jest": "^29.5.1",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.16.0",
+    "@types/node-fetch": "^2.6.4",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "axios": "^1.4.0",
     "cross-env": "^7.0.3",
     "cross-fetch": "^3.1.5",
     "eslint": "^8.39.0",
@@ -62,6 +64,7 @@
     "fake-indexeddb": "^4.0.1",
     "jest": "^29.5.0",
     "nock": "^13.3.1",
+    "node-fetch": "^2.6.12",
     "prettier": "^2.8.8",
     "release-it": "^15.10.1",
     "rimraf": "^5.0.0",
@@ -124,19 +127,5 @@
       "@typescript-eslint/no-non-null-assertion": "off",
       "@typescript-eslint/no-explicit-any": "off"
     }
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "testPathIgnorePatterns": [
-      "<rootDir>/dist/"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/dist/"
-    ],
-    "setupFiles": [
-      "fake-indexeddb/auto"
-    ]
   }
 }
