--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "rxdb-replication-orion",
+  "name": "rxdb-orion",
   "description": "RxDB replication for Laravel Orion",
   "readmeFilename": "README.md",
   "version": "0.3.3",
   "license": "MIT",
   "keywords": [
-    "rxdb",
-    "replication",
     "laravel",
-    "orion"
+    "orion",
+    "replication",
+    "rxdb",
+    "typescript"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/serenysoft/rxdb-replication-orion"
+    "url": "https://github.com/serenysoft/rxdb-orion"
   },
   "bugs": {
-    "url": "https://github.com/serenysoft/rxdb-replication-orion/issues"
+    "url": "https://github.com/serenysoft/rxdb-orion/issues"
   },
   "author": {
     "name": "Leandro Guindani Gehlen",
@@ -69,7 +70,6 @@
     "rimraf": "^5.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "tslib": "^2.6.0",
     "typescript": "^5.1.6"
   },
   "release-it": {
