--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "axios": "^1.5.0",
     "cross-env": "^7.0.3",
     "cross-fetch": "^4.0.0",
     "eslint": "^8.44.0",
@@ -64,7 +65,6 @@
     "fake-indexeddb": "^4.0.1",
     "jest": "^29.6.1",
     "nock": "^13.3.1",
-    "node-fetch": "^2.6.12",
     "prettier": "^2.8.8",
     "release-it": "^16.1.0",
     "rimraf": "^5.0.1",
