--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "fake-indexeddb": "^4.0.1",
     "jest": "^29.6.1",
     "nock": "^13.3.1",
+    "node-fetch": "^2.6.12",
     "prettier": "^2.8.8",
     "release-it": "^16.1.0",
     "rimraf": "^5.0.1",
